--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "homepage": "https://github.com/KiaFathi/reactFluxTemplate",
   "dependencies": {
     "flux": "^2.0.1",
-    "react": "^0.11.2"
+    "react": "^0.11.2",
+    "request": "^2.44.0"
   },
   "devDependencies": {
     "browserify": "^5.12.0",
