--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
   "homepage": "https://github.com/KiaFathi/reactFluxTemplate",
   "dependencies": {
     "flux": "^2.0.1",
+    "google-calendar": "^1.3.1",
+    "google-oauth-jwt": "^0.1.4",
     "react": "^0.11.2",
-    "request": "^2.44.0"
+    "request": "^2.44.0",
+    "zepto-browserify": "^1.1.3-0"
   },
   "devDependencies": {
     "browserify": "^5.12.0",
